add helper example

--- a/src/some-view/template.hbs
+++ b/src/some-view/template.hbs
@@ -1,2 +1,3 @@
 <h1>{{name}} is showing!</h1>
+<p>{{#wrapWithMoo}}(this should be surrounded by the sound a cow makes){{/wrapWithMoo}}</p>
 <button>go to another view</button>
